test/functions/bradc/varFns/retLocFromVarFn.good
retLocFromVarFn.chpl:4: In function 'this':
retLocFromVarFn.chpl:8: error: illegal expression to return by ref
